fix: added position relative to all to resolve ios overflow problem

--- a/style.css
+++ b/style.css
@@ -286,6 +286,7 @@ textarea {
     .contentMap >*,
 
     ) {
+        position: relative;
         overflow-y: auto;
         overflow-x: hidden;
     }
